--- a/.vimiumrc
+++ b/.vimiumrc
@@ -1,10 +1,12 @@
 #Excluded URLs and keys
+#Format:
+#Patterns:Keys
 http*://mail.google.com/*:jkgic
 http*://docs.google.com/*:
 http*://soundcloud.com/*:h
 http*://app.roll20.net/editor/*:wcij/nN;[
 http*://github.com/*:sgndcipw
-http*://twitter.com/*rmnljkghp
+http*://twitter.com/*:rmnljkghp
 
 
 #Custom key mappings
